--- a/src/assets/css/_main-nav.scss
+++ b/src/assets/css/_main-nav.scss
@@ -25,7 +25,7 @@
       color: white;
 
       &.is--active {
-        backgrond: var(--man-color-500);
+        background: var(--man-color-500);
       }
     }
   }
