--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -53,6 +53,7 @@
   --main-color-500: #8F00FF;
   --main-color-400: #A533FF;
   --main-color-300: #E9CCFF; 
+  --main-color-200: #E9CCFF; 
 
   --border-radius-p: 5px;
   --border-radius-m: 9px;
