--- a/src/assets/css/_video-card.scss
+++ b/src/assets/css/_video-card.scss
@@ -1,19 +1,22 @@
 .video-card {
+
 	display: flex;
 	flex-direction: column;
 	text-decoration: none;
-	max-width: 210px;
-
-	&.-small {
-		max-width: 150px;
-	}
+	transition: all 0.2s ease ;
 
 	&__list {
+		--minSize: 210px;
 		list-style-type: none;
 		padding: var(--gap4) 0;
-		display: flex;
-		flex-wrap: wrap;
 		gap:var(--gap4);
+		display: grid;
+	  grid-template-columns: repeat(auto-fill, minmax(var(--minSize), 1fr));
+
+	  &.-small {
+	  	--minSize: 150px;
+	  }
+
 	}
 
 	&__thumb {
@@ -21,9 +24,16 @@
 		overflow: hidden;
 		height: 12rem;
 		width: 100%;
+		box-shadow: 0 0 0;
 
 		video {
 			user-select: none;
+		}
+	}
+
+	&:hover {
+		.video-card__thumb {
+			box-shadow: 0 0px 30px -10px var(--main-color-500);
 		}
 	}
 
@@ -63,7 +73,6 @@
 		color: var(--gray-800);
 	}
 }
-
 
   .video-modal__container {
     display: grid;
