--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -55,6 +55,9 @@
   --main-color-300: #E9CCFF; 
   --main-color-200: #E9CCFF; 
 
+  --progress-bar-begin-bg: #003CFF;
+  --progress-bar-end-bg: #8F00FF;
+
   --border-radius-p: 5px;
   --border-radius-m: 9px;
 
