--- a/src/assets/css/_main-nav.scss
+++ b/src/assets/css/_main-nav.scss
@@ -23,10 +23,12 @@
       background: var(--main-color-400);
       border-color: var(--main-color-400);
       color: white;
+    }
 
-      &.is--active {
-        background: var(--man-color-500);
-      }
+    &.is--active {
+      background: var(--main-color-500);
+      color: white;
+      border-color: var(--main-color-500);
     }
   }
 }
