--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -7,4 +7,4 @@
 @forward '_progress.scss';
 @forward '_chart.scss';
 @forward '_video-card.scss';
-@forward '_influencer-card.scss';
+@forward '_creator-card.scss';
