--- a/src/assets/css/_video-card.scss
+++ b/src/assets/css/_video-card.scss
@@ -20,6 +20,7 @@
 	}
 
 	&__thumb {
+		background: var(--gray-100);
 		border-radius: var(--border-radius-m);
 		overflow: hidden;
 		height: 12rem;
